# analysis_of_banking_operations

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
reports/: report_spending_by_category_20250705_135604.json  report_spending_by_category_20250705_142726.json  reports_spending_by_category_20250707_224726.json  supermarket_expenses_report.json
src/: decorators.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
